--- a/UI/home.html
+++ b/UI/home.html
@@ -6,7 +6,7 @@
     <title>myDiary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="js/main.js"></script>
+
 </head>
 <body>
     <div>
@@ -14,15 +14,66 @@
                 <h1>MyDiary</h1>
             </header>
             <nav></nav>
-            <div class="login-form">
-                <form action="#">
-                    
-                </form>
-            </div>
+            <div class="login-form form">
+                    <ul class="tab-group">
+                        <li class="tab active">
+                            <a href="#signup">Register</a>
+                        </li>
+                        <li class="tab">
+                            <a href="#login">Log In</a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content">
+                        <div id="signup" onclick="switchTab(signup)">
+                            <h1>Register for an Account</h1>
+                            <form action="/" method="post">
+                                <div class="top-row">
+                                    <div class="field-wrap">
+                                        <label> First Name <span class="req">*</span> </label>
+                                        <input type="text" required autocomplete="off" />
+                                    </div>
+                                    <div class="field-wrap">
+                                        <label>Last Name<span class="req">*</span></label>
+                                        <input type="text" required autocomplete="off" />
+                                    </div>
+                                </div>
+                                <div class="field-wrap">
+                                    <label>Email Address<span class="req">*</span></label>
+                                    <input type="email" required autocomplete="off" />
+                                </div>
+                                <div class="field-wrap">
+                                    <label>Set Password<span class="req">*</span></label>
+                                    <input type="password" required autocomplete="off" />
+                                </div>
+                                <div class="field-wrap">
+                                    <label>Confirm Password<span class="req">*</span></label>
+                                    <input type="password" required autocomplete="off" />
+                                </div>
+                                <button type="submit" class="button button-block" />Get Started</button>
+                            </form> <!--Register form-->
+                        </div>
+                        <div id="login" onclick="switchTab(login)">
+                            <h1>Welcome Back!</h1>
+                            <form action="/" method="post">
+                                <div class="field-wrap">
+                                    <label>Email Address<span class="req">*</span></label>
+                                    <input type="email" required autocomplete="off" />
+                                </div>
+                                <div class="field-wrap">
+                                    <label>Password<span class="req">*</span></label>
+                                    <input type="password" required autocomplete="off" />
+                                </div>
+                                <p class="forgot-p"><a href="#">Forgot Password?</a></p>
+                                <button class="button button-block" />Log In</button>
+                            </form><!-- Login form-->
+                        </div>
+                    </div><!-- tab-content -->
+            </div><!-- /form -->
             <footer>
-                <div>Designed by Charles Kato</div>
+                <div>Designed by Charles Kato </div>
             </footer>
     </div>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
