Add navigation bar

--- a/UI/addEntry.html
+++ b/UI/addEntry.html
@@ -13,11 +13,22 @@
 <body>
     <div class="pg-content">
         <header>
-            <h1>MyDiary</h1>
-        </header>
-        <nav>
-
-        </nav>
+<nav>
+    <p>
+        <h1>My Diary</h1>
+    </p>
+    <ul>
+        <li>
+            <a href="home.html">Home</a>
+        </li>
+        <li>
+            <a href="addEntryhtml">Create Journel</a>
+        </li>
+        <li>
+            <a href="diaryentries.html">Diary entries</a>
+        </li>
+    </ul>
+</nav>
         <div class="dEntry">
             <div>
                 <h2>Add diary entry</h2>
