--- a/UI/welcome.html
+++ b/UI/welcome.html
@@ -10,13 +10,29 @@
 
 </head>
 
-<body>
+<body id="welcome">
     <div>
         <header>
             <h1>MyDiary</h1>
         </header>
         <nav></nav>
-
+    <div class="pg-content">
+        <div class="profile">
+                <img src="img/pp.jpg" alt="profile picture">
+        </div>
+        <div class="dashboard">
+            <h1>You are welcome</h1>
+            <p>Alot of moments are worth keeping in a diary to help us travel the memory lane after a while</p>
+        </div>
+        <div class="category">
+            <ul>
+                <li>Travels</li>
+                <li>Functions</li>
+                <li>Parties</li>
+                <li>Sorrows</li>
+            </ul>
+        </div>
+    </div>
         <footer>
             <div>Designed by Charles Kato </div>
         </footer>
