--- a/UI/addEntry.html
+++ b/UI/addEntry.html
@@ -13,22 +13,26 @@
 <body>
     <div class="pg-content">
         <header>
-<nav>
-    <p>
-        <h1>My Diary</h1>
-    </p>
-    <ul>
-        <li>
-            <a href="home.html">Home</a>
-        </li>
-        <li>
-            <a href="addEntryhtml">Create Journel</a>
-        </li>
-        <li>
-            <a href="diaryentries.html">Diary entries</a>
-        </li>
-    </ul>
-</nav>
+        <nav>
+            <p>
+                <a href="#">My Diary</a>
+            </p>
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                </li>
+                <li>
+                    <a href="addEntry.html">Create Journel</a>
+                </li>
+                <li>
+                    <a href="diaryentries.html">Diary entries</a>
+                </li>
+                <li>
+                    <a href="profile.html">My profile</a>
+                </li>
+
+            </ul>
+        </nav>
         <div class="dEntry">
             <div>
                 <h2>Add diary entry</h2>
