--- a/UI/diaryentries.html
+++ b/UI/diaryentries.html
@@ -21,15 +21,17 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
-                    <a href="addEntryhtml">Create Journel</a>
+                    <a href="addEntry.html">Create Journel</a>
                 </li>
                 <li>
                     <a href="diaryentries.html">Diary entries</a>
                 </li>
+                <li>
+                    <a href="profile.html">My profile</a>
+                </li>
+
             </ul>
         </nav>
-
-
 
         <div>
             <!-- Tab links -->
