--- a/UI/diaryentry.html
+++ b/UI/diaryentry.html
@@ -10,10 +10,26 @@
 </head>
 <body>
     <div class="pg-content">
-        <header>
-            <h1>MyDiary</h1>
-        </header>
-        <nav></nav>
+        <nav>
+            <p>
+                <a href="#">My Diary</a>
+            </p>
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                </li>
+                <li>
+                    <a href="addEntry.html">Create Journel</a>
+                </li>
+                <li>
+                    <a href="diaryentries.html">Diary entries</a>
+                </li>
+                <li>
+                    <a href="profile.html">My profile</a>
+                </li>
+
+            </ul>
+        </nav>
         <div class="diaryEntry">
             <div class="dHeader">
                 <h2>September 14, 2008</h2> 
