--- a/UI/home.html
+++ b/UI/home.html
@@ -14,8 +14,10 @@
             <p><a href="#">My Diary</a></p>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="addEntryhtml">Create Journel</a></li>
+                <li><a href="addEntry.html">Create Journel</a></li>
                 <li><a href="diaryentries.html">Diary entries</a></li>
+                <li><a href="profile.html">My profile</a></li>
+
             </ul>
         </nav>
             <div class="form">
