--- a/UI/profile.html
+++ b/UI/profile.html
@@ -12,22 +12,26 @@
 
 <body>
     <div id="home" class="pg-content">
-    <nav>
-        <p>
-            <h1>My Diary</h1>
-        </p>
-        <ul>
-            <li>
-                <a href="home.html">Home</a>
-            </li>
-            <li>
-                <a href="addEntry.html">Create Journel</a>
-            </li>
-            <li>
-                <a href="diaryentries.html">Diary entries</a>
-            </li>
-        </ul>
-    </nav>
+        <nav>
+            <p>
+                <a href="#">My Diary</a>
+            </p>
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                </li>
+                <li>
+                    <a href="addEntry.html">Create Journel</a>
+                </li>
+                <li>
+                    <a href="diaryentries.html">Diary entries</a>
+                </li>
+                <li>
+                    <a href="profile.html">My profile</a>
+                </li>
+
+            </ul>
+        </nav>
         <div class="profile">
             <div class="profile-card">
                 <div id="profile-bg"></div>
