--- a/UI/welcome.html
+++ b/UI/welcome.html
@@ -12,10 +12,26 @@
 
 <body id="welcome">
     <div>
-        <header>
-            <h1>MyDiary</h1>
-        </header>
-        <nav></nav>
+    <nav>
+        <p>
+            <a href="#">My Diary</a>
+        </p>
+        <ul>
+            <li>
+                <a href="home.html">Home</a>
+            </li>
+            <li>
+                <a href="addEntry.html">Create Journel</a>
+            </li>
+            <li>
+                <a href="diaryentries.html">Diary entries</a>
+            </li>
+            <li>
+                <a href="profile.html">My profile</a>
+            </li>
+
+        </ul>
+    </nav>
     <div class="pg-content">
         <div class="profile">
                 <img src="img/pp.jpg" alt="profile picture">
