--- a/UI/addEntry.html
+++ b/UI/addEntry.html
@@ -19,7 +19,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="addEntry.html">Create Journel</a>
