--- a/UI/diaryentry.html
+++ b/UI/diaryentry.html
@@ -16,7 +16,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="addEntry.html">Create Journel</a>
