--- a/UI/profile.html
+++ b/UI/profile.html
@@ -18,7 +18,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="addEntry.html">Create Journel</a>
