--- a/UI/index.html
+++ b/UI/index.html
@@ -22,18 +22,18 @@
         </nav>
             <div class="form">
                 <div class="tab-group">
-                    <div class="tab active">
+                    <div class="tab active" onclick="switchTab(event,'signup')">
                         <a href="#signup">Register</a>
                     </div>
-                    <div class="tab">
+                    <div class="tab" onclick="switchTab(event,'login')">
                         <a href="#login">Log In</a>
                     </div>
                 </div>
 
                     <div class="tab-content">
-                        <div id="signup" onclick="switchTab(signup)">
+                        <div id="signup">
                             <h1>Register for an Account</h1>
-                            <form action="/" method="post">
+                            <form action="#" method="post">
                                 <div class="top-row">
                                     <div class="field-wrap">
                                         <label> First Name <span class="req">*</span> </label>
@@ -59,9 +59,9 @@
                                 <button type="submit" class="button button-block" />Get Started</button>
                             </form> <!--Register form-->
                         </div>
-                        <div id="login" onclick="switchTab(login)">
+                        <div id="login">
                             <h1>Welcome Back!</h1>
-                            <form action="/" method="post">
+                            <form action="#" method="post">
                                 <div class="field-wrap">
                                     <label>Email Address<span class="req">*</span></label>
                                     <input type="email" required autocomplete="off" />
@@ -71,7 +71,7 @@
                                     <input type="password" required autocomplete="off" />
                                 </div>
                                 <p class="forgot-p"><a href="#">Forgot Password?</a></p>
-                                <button class="button button-block" />Log In</button>
+                                <button class="button button-block" /> Log In</button>
                             </form><!-- Login form-->
                         </div>
                     </div><!-- tab-content -->
