--- a/UI/index.html
+++ b/UI/index.html
@@ -10,73 +10,93 @@
 </head>
 <body>
     <div id="home" class="pg-content">
-        <nav>
-            <p><a href="#">My Diary</a></p>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="addEntry.html">Create Journel</a></li>
-                <li><a href="diaryentries.html">Diary entries</a></li>
-                <li><a href="profile.html">My profile</a></li>
+    <header id="header">
+            <nav>
+                <p><a href="#">My Diary</a></p>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="addEntry.html">Create Journel</a></li>
+                    <li><a href="diaryentries.html">Diary entries</a></li>
+                    <li><a href="profile.html">My profile</a></li>
 
-            </ul>
-        </nav>
-            <div class="form">
-                <div class="tab-group">
-                    <div class="tab active" onclick="switchTab(event,'signup')">
-                        <a href="#signup">Register</a>
-                    </div>
-                    <div class="tab" onclick="switchTab(event,'login')">
-                        <a href="#login">Log In</a>
-                    </div>
+                </ul>
+            </nav>
+    </header>
+    <section>
+        <div>
+            <div class="home-col"><!--msg column-->
+                <div id="home-msg">
+                    <p>Memories Memories, sweet memories</p>
+                    <p>You can easily record your memories online now </p>
+                    <ul>
+                        <li class="color1">To do list</li>
+                        <li class="color2">Aniverseries</li>
+                        <li class="color4">And many more</li>
+                    </ul>
                 </div>
+            </div>
+            <div class="home-col"> <!--form column-->
+                <div class="form">
+                    <div class="tab-group">
+                        <div class="tab active" onclick="switchTab(event,'signup')">
+                            <a href="#signup">Register</a>
+                        </div>
+                        <div class="tab" onclick="switchTab(event,'login')">
+                            <a href="#login">Log In</a>
+                        </div>
+                    </div>
 
-                    <div class="tab-content">
-                        <div id="signup">
-                            <h1>Register for an Account</h1>
-                            <form action="#" method="post">
-                                <div class="top-row">
-                                    <div class="field-wrap">
-                                        <label> First Name <span class="req">*</span> </label>
-                                        <input type="text" required autocomplete="off" />
+                        <div class="tab-content">
+                            <div id="signup">
+                                <h1>Register for an Account</h1>
+                                <form action="#" method="post">
+                                    <div class="top-row">
+                                        <div class="field-wrap">
+                                            <label> First Name <span class="req">*</span> </label>
+                                            <input type="text" required autocomplete="off" />
+                                        </div>
+                                        <div class="field-wrap">
+                                            <label>Last Name<span class="req">*</span></label>
+                                            <input type="text" required autocomplete="off" />
+                                        </div>
                                     </div>
                                     <div class="field-wrap">
-                                        <label>Last Name<span class="req">*</span></label>
-                                        <input type="text" required autocomplete="off" />
+                                        <label>Email Address<span class="req">*</span></label>
+                                        <input type="email" required autocomplete="off" />
                                     </div>
-                                </div>
-                                <div class="field-wrap">
-                                    <label>Email Address<span class="req">*</span></label>
-                                    <input type="email" required autocomplete="off" />
-                                </div>
-                                <div class="field-wrap">
-                                    <label>Set Password<span class="req">*</span></label>
-                                    <input type="password" required autocomplete="off" />
-                                </div>
-                                <div class="field-wrap">
-                                    <label>Confirm Password<span class="req">*</span></label>
-                                    <input type="password" required autocomplete="off" />
-                                </div>
-                                <button type="submit" class="button button-block" />Get Started</button>
-                            </form> <!--Register form-->
-                        </div>
-                        <div id="login">
-                            <h1>Welcome Back!</h1>
-                            <form action="#" method="post">
-                                <div class="field-wrap">
-                                    <label>Email Address<span class="req">*</span></label>
-                                    <input type="email" required autocomplete="off" />
-                                </div>
-                                <div class="field-wrap">
-                                    <label>Password<span class="req">*</span></label>
-                                    <input type="password" required autocomplete="off" />
-                                </div>
-                                <p class="forgot-p"><a href="#">Forgot Password?</a></p>
-                                <button class="button button-block" /> Log In</button>
-                            </form><!-- Login form-->
-                        </div>
-                    </div><!-- tab-content -->
-            </div><!-- /form -->
-            <footer>
+                                    <div class="field-wrap">
+                                        <label>Set Password<span class="req">*</span></label>
+                                        <input type="password" required autocomplete="off" />
+                                    </div>
+                                    <div class="field-wrap">
+                                        <label>Confirm Password<span class="req">*</span></label>
+                                        <input type="password" required autocomplete="off" />
+                                    </div>
+                                    <button type="submit" class="button button-block" />Get Started</button>
+                                </form> <!--Register form-->
+                            </div>
+                            <div id="login">
+                                <h1>Welcome Back!</h1>
+                                <form action="#" method="post">
+                                    <div class="field-wrap">
+                                        <label>Email Address<span class="req">*</span></label>
+                                        <input type="email" required autocomplete="off" />
+                                    </div>
+                                    <div class="field-wrap">
+                                        <label>Password<span class="req">*</span></label>
+                                        <input type="password" required autocomplete="off" />
+                                    </div>
+                                    <p class="forgot-p"><a href="#">Forgot Password?</a></p>
+                                    <button class="button button-block" /> Log In</button>
+                                </form><!-- Login form-->
+                            </div>
+                        </div><!-- tab-content -->
+                </div><!-- /form -->
+            </div>
+        </div>
+    </section>
+
+            <footer id="footer">
                 <div>Designed by Charles Kato </div>
             </footer>
     </div>
